k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextjs-webapp
  namespace: nextjs-webapp
  labels:
    app: nextjs-webapp
spec:
  type: ClusterIP
  selector:
    app: nextjs-webapp
  ports:
    - name: http
      port: 80
      targetPort: http
